--- a/package.json
+++ b/package.json
@@ -62,7 +62,8 @@
     "postcss-remove-root": "0.0.2",
     "postcss-reporter": "^1.3.0",
     "style-loader": "^0.13.0",
-    "webpack": "^1.12.12"
+    "webpack": "^1.12.12",
+    "postcss-nested": "^1.0.0"
   },
   "author": "Brent Jackson",
   "license": "MIT",
